test/data/syntax-errors/unbalanced-square-brackets.roo
a = [1,2,3] #good
y = x[0 #bad